[gd_scene load_steps=4 format=3 uid="uid://vdcr7rpctmaj"]

[ext_resource type="Texture2D" uid="uid://m73tke14awph" path="res://media/parete.png" id="2_gc0em"]
[ext_resource type="FontFile" uid="uid://drjr26g0im6iw" path="res://fonts/PixelOperator8.ttf" id="3_3ykye"]
[ext_resource type="Script" uid="uid://1cnkq6fm0p2q" path="res://scripts/settings.gd" id="4_gc0em"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("4_gc0em")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
texture = ExtResource("2_gc0em")

[node name="CanvasModulate" type="CanvasModulate" parent="TextureRect"]
color = Color(0.74558026, 0.7455802, 0.7455802, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
offset_right = 470.58826
offset_bottom = 352.9412
scale = Vector2(1.7, 1.7)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3ykye")
theme_override_font_sizes/font_size = 48
text = "Settings
"
horizontal_alignment = 1

[node name="Music" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="SFX" type="CheckButton" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sound Effects"

[node name="Back" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Back"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/Music" to="." method="_on_music_toggled"]
[connection signal="toggled" from="CanvasLayer/MarginContainer/VBoxContainer/SFX" to="." method="_on_sfx_toggled"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
